--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -73,6 +73,26 @@
     border-radius: 5px;
 }
 
+/* Cart Icon */
+.cart-icon {
+    position: relative;
+}
+
+.cart-icon i {
+    font-size: 1.2rem;
+}
+
+.cart-count {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: #dc3545;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 0.75rem;
+}
+
 /* Navbar Actions */
 .navbar-actions {
     display: flex;
